Facebook login working. 	Now to fix account linkin etc.

--- a/ExternalLogins.Facebook/appsettings.json
+++ b/ExternalLogins.Facebook/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExternalLogins.Facebook-e927ef00-cf87-41db-be25-d5ca9e704da7;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local);Database=ExternalLogins;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
