--- a/ExternalLogins.Facebook/ExternalLogins.Facebook.csproj
+++ b/ExternalLogins.Facebook/ExternalLogins.Facebook.csproj
@@ -11,6 +11,10 @@
   <PropertyGroup>
     <UserSecretsId>aspnet-ExternalLogins.Facebook-1bee380e-5a6d-4d20-9274-c0b886db5528</UserSecretsId>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="wwwroot\css\erisia.css" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
