--- a/Code/ExternalLogin/Properties/launchSettings.json
+++ b/Code/ExternalLogin/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "http://localhost:63432/Page/ThePage",
+      "launchUrl": "https://localhost:44327/Page/ThePage",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
