--- a/Code/ExternalLogins.Facebook/Properties/launchSettings.json
+++ b/Code/ExternalLogins.Facebook/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-{
+﻿{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "https://localhost:44365/",
-      "sslPort": 44365
+      "applicationUrl": "http://localhost:53482/",
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -21,7 +21,7 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "applicationUrl": "http://localhost:65105"
+      "applicationUrl": "http://localhost:53483"
     }
   }
 }
