Local register and login working.

--- a/Code/ExternalLogins.Facebook/appsettings.json
+++ b/Code/ExternalLogins.Facebook/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExternalLogins.Facebook-5d53770b-e568-4e69-ba05-65b51b9725d2;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(local);Database=ExternalLogins;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "IncludeScopes": false,
