--- a/Code/ExternalLogins.Facebook/Properties/launchSettings.json
+++ b/Code/ExternalLogins.Facebook/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Bookings",
+      "launchUrl": "Manage",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
