--- a/Code/ExternalLogins.Facebook/ExternalLogins.Facebook.csproj
+++ b/Code/ExternalLogins.Facebook/ExternalLogins.Facebook.csproj
@@ -16,6 +16,7 @@
     <Content Include="wwwroot\css\erisia.css" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="6.1.1" />
     <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.0.0" />
     <PackageReference Include="Microsoft.AspNetCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Cookies" Version="1.1.2" />
